<resources>

    <string name="app_name">QuiteBaby</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main_game">MainGameActivity</string>
    <string name="new_game">New Game</string>
    <string name="resume_game">Resume Game </string>
    <string name="high_scores">High Scores</string>
    <string name="options">Options</string>
    <string name="how_to_play">How To Play</string>
    <string name="quit">Quit</string>
	<string name ="instructions">Instructions:</string>
	<string name ="more">More</string>
	<string name ="sound">Sound</string>
	<string name = "difficulty">Difficulty</string>
	<string name = "save">Save</string>
	<string name = "cancel">Cancel</string>
	<string-array name ="soundOptions">
	    <item>On</item>
	    <item>Off</item>
	</string-array>
	<string-array name="difficultyOptions">
	    <item>Easy</item>
	    <item>Normal</item>
	    <item>Hard</item>
	</string-array>
</resources>