<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/baby"
    android:orientation="vertical" >

    <Button
        android:id="@+id/newGameButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/new_game" />
<!--     <Button -->
<!--         android:id="@+id/resumeGameButton" -->
<!--         android:layout_width="200dp" -->
<!--         android:layout_height="wrap_content" -->
<!--         android:layout_gravity="center_horizontal" -->
<!--         android:layout_marginLeft="20dp" -->
<!--         android:layout_marginTop="20dp" -->
<!--         android:text="@string/resume_game"/> -->
    <Button
        android:id="@+id/highScoresButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/high_scores" />
    <Button
        android:id="@+id/howToPlayButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/how_to_play" />
    <Button
        android:id="@+id/optionsButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/options" />
    <Button
        android:id="@+id/quitButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/quit" />

</LinearLayout>